--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
+    "@fortawesome/free-regular-svg-icons": "^5.1.0-11",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "^0.1.0-11",
     "bootstrap": "^4.1.2",
     "moment": "^2.22.2",
     "moment-business-time": "^0.7.1",
     "moment-timezone": "^0.5.21",
     "react": "^16.4.1",
+    "react-bootstrap-typeahead": "^3.1.5",
+    "react-datetime": "^2.14.0",
     "react-dom": "^16.4.1",
     "react-moment": "^0.7.9",
     "react-scripts": "1.1.4",
