--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -749,13 +749,14 @@ rollout 100%:
 
     export TILLER_TLS_OPTS='--tls --tls-ca-cert tiller-ca.crt --tls-cert tiller.crt --tls-key tiller.key'
 
-    helm init --upgrade
+    helm init --upgrade --tiller-namespace="$TILLER_NAMESPACE"
     kubectl rollout status -n "$TILLER_NAMESPACE" -w "deployment/tiller-deploy"
-    if ! helm version --debug; then
+    if ! helm version $TILLER_TLS_OPTS --debug; then
       echo "Failed to init Tiller."
       return 1
     fi
     echo ""
+
   }
 
   function create_secret() {
