--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -601,7 +601,7 @@ rollout 100%:
       secret_name=''
     fi
 
-    helm upgrade --install $TILLER_TLS_OPTS \
+    helm upgrade --install \
       --wait \
       --set service.enabled="$service_enabled" \
       --set releaseOverride="$CI_ENVIRONMENT_SLUG" \
@@ -748,15 +748,10 @@ rollout 100%:
 
   function install_tiller() {
     echo "Checking Tiller..."
-    kubectl get secrets/tiller-secret -n "$TILLER_NAMESPACE" -o "jsonpath={.data['ca\.crt']}" | base64 -d > tiller-ca.crt
-    kubectl get secrets/tiller-secret -n "$TILLER_NAMESPACE" -o "jsonpath={.data['tls\.crt']}" | base64 -d > tiller.crt
-    kubectl get secrets/tiller-secret -n "$TILLER_NAMESPACE" -o "jsonpath={.data['tls\.key']}" | base64 -d > tiller.key
-
-    export TILLER_TLS_OPTS='--tls --tls-ca-cert tiller-ca.crt --tls-cert tiller.crt --tls-key tiller.key'
 
     helm init --upgrade --tiller-namespace="$TILLER_NAMESPACE"
     kubectl rollout status -n "$TILLER_NAMESPACE" -w "deployment/tiller-deploy"
-    if ! helm version $TILLER_TLS_OPTS --debug; then
+    if ! helm version --debug; then
       echo "Failed to init Tiller."
       return 1
     fi
