--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -8,7 +8,9 @@ image:
   repository: nginx
   pullPolicy: IfNotPresent
 
-imagePullSecrets: []
+imagePullSecrets:
+  - name: gitlab-registry
+
 nameOverride: ""
 fullnameOverride: ""
 
@@ -35,17 +37,18 @@ service:
   port: 80
 
 ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod-cluster-issuer
   hosts:
-    - host: chart-example.local
-      paths: []
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    - host: remote.mcadm.me
+      paths:
+        - /
+  tls:
+   - secretName: remote-tls
+     hosts:
+       - remote.mcadm.me
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
