--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -42,13 +42,13 @@ ingress:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod-cluster-issuer
   hosts:
-    - host: remote.mcadm.me
+    - host: synctime.in
       paths:
         - /
   tls:
-   - secretName: remote-tls
+   - secretName: synctime-tls
      hosts:
-       - remote.mcadm.me
+       - synctime.in
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
