--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "antd": "^4.1.0",
     "gatsby": "^2.19.45",
     "gatsby-plugin-antd": "^2.2.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
+    "use-persisted-state": "^0.3.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
