--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,90 +1,23 @@
 server {
-  listen       80;
-  server_name  localhost;
+	listen 80;
+	root /usr/share/nginx/html;
 
+	index index.html;
+	autoindex off;
+	charset utf-8;
 
-  #charset koi8-r;
-  #access_log  /var/log/nginx/host.access.log  main;
+	error_page 404 /404.html;
 
-  location / {
-    if ($request_method = 'OPTIONS') {
+	location ~* \.(html)$ {
+		add_header Cache-Control "no-store";
+		expires    off;
+	}
+	location ~* \.(ico|jpg|jpeg|png|gif|svg|js|jsx|css|less|swf|eot|ttf|otf|woff|woff2)$ {
+		add_header Cache-Control "public";
+		expires +1y;
+	}
 
-      add_header 'Access-Control-Allow-Origin' '*';
+	rewrite ^([^.]*[^/])$ $1/ permanent;
 
-      #
-      # Om nom nom cookies
-      #
-
-      add_header 'Access-Control-Allow-Credentials' 'true';
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-
-      #
-      # Custom headers and headers various browsers *should* be OK with but aren't
-      #
-
-      add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-
-      #
-      # Tell client that this pre-flight info is valid for 20 days
-      #
-
-      add_header 'Access-Control-Max-Age' 1728000;
-      add_header 'Content-Type' 'text/plain charset=UTF-8';
-      add_header 'Content-Length' 0;
-
-      return 204;
-    }
-
-    if ($request_method = 'POST') {
-
-      add_header 'Access-Control-Allow-Origin' '*';
-      add_header 'Access-Control-Allow-Credentials' 'true';
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-      add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-
-    }
-
-    if ($request_method = 'GET') {
-
-      add_header 'Access-Control-Allow-Origin' '*';
-      add_header 'Access-Control-Allow-Credentials' 'true';
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-      add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-
-    }
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-  }
-
-  #error_page  404              /404.html;
-
-  # redirect server error pages to the static page /50x.html
-  #
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
-
-  # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-  #
-  #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-  # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-  #
-  #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-  # deny access to .htaccess files, if Apache's document root
-  # concurs with nginx's one
-  #
-  #location ~ /\.ht {
-    #    deny  all;
-    #}
+	try_files $uri $uri/ $uri/index.html =404;
 }
