--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
+    "theme-switcher": "^1.0.2",
     "use-persisted-state": "^0.3.0"
   },
   "devDependencies": {
